adding album related endpoints
