# zema_store_backend/src/models/responses/error-response.model.ts
@@ -1,0 +1,9 @@
+export default class ErrorResponse {
+  error: string;
+  data: any;
+
+  constructor(error, data = null) {
+    this.error = error;
+    this.data = data;
+  }
+}
