# zema_store_backend/src/routes/album.routes.ts
@@ -1,0 +1,28 @@
+import { Router } from "express";
+
+import {
+  addAlbum,
+  deleteAlbum,
+  getAlbum,
+  getAlbums,
+  getAlbumsByArtist,
+  updateAlbum,
+} from "../controllers/album.controllers";
+
+import { isAdmin } from "../middlewares/auth.middlewares";
+
+import { imageUploader } from "../middlewares/multer.middlewares";
+
+const router = Router();
+
+router
+  .route("/:id")
+  .get(getAlbum)
+  .patch(imageUploader.single("photo"), updateAlbum)
+  .delete(deleteAlbum);
+
+router.route("/").get(getAlbums).post(imageUploader.single("photo"), addAlbum);
+
+router.route("/artist/:artistId").get(getAlbumsByArtist);
+
+export default (() => Router().use("/albums", isAdmin, router))();
